# eic_geometry

./: .gitmodules  CMakeLists.txt  README.md  hadron_endcap.xml  zdc.xml
compact/: configuration_default.xml  configuration_zdc.xml  definitions.xml  materials.xml
compact/beampipe/: central_beampipe.xml
compact/ecal/: ZDC_Crystal_LYSO.xml  ZDC_PbWO4.xml  ZDC_PbWO4_20cm.xml  ecal_forward_homogeneous.xml  ecal_forward_insert_homogeneous.xml
compact/hcal/: hcal_forward_ATHENA.xml  hcal_forward_ECCE.xml  hcal_forward_ePIC.xml  hcal_forward_insert.xml  hcal_forward_steel.xml
compact/zdc/: zdc_hcal.xml
hepmc_generation/: gen_lambda_decay.cxx  gen_lambda_decay_full_acceptance.cxx  gen_multiple_particles.cxx  gen_particles.cxx  gen_pi0.cxx  gen_sigma_decay.cxx
scripts/: endcapP_insert_reco.py  gps.mac  hadron_endcap_reco.py  insert_setup.sh  loop_energies.sh  recon_only.sh  run_sim_epic.sh  run_sim_gps.sh  run_sim_hepmc.sh  run_sim_lambda_decay.sh  run_sim_multiple_particles.sh  run_sim_pi0_decay.sh  run_sim_sigma_decay.sh  setup.sh  zdc_reco.py
slurm_scripts/: run_eU_sim.sh  run_eicrecon.sh  run_gun.sh  run_juggler.sh  slurm-batch.py
src/: InsertCalorimeter_geo.cpp  ZDC_Crystal_geo.cpp
